fixing overflow  in mobile again with text font-size and width

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,6 +215,9 @@ footer .social a{
     padding: 0;
     box-sizing: border-box;
   }
+  p{
+    font-size: 12px;
+  }
   .opening h1{
     font-size: 60px;
   }
@@ -224,6 +227,9 @@ footer .social a{
   header{
     width: 95vw;
     padding: 20px 5px;
+  }
+  .content p{
+    width: 100%;
   }
   .opening p{
     width: 100%;
@@ -239,7 +245,7 @@ footer .social a{
     padding: 20px
   }
   img{
-    width:80%;
+    width:100%;
     height: 100%;
   }
   .jumbo p{
@@ -264,6 +270,9 @@ footer .social a{
   .fly1, .fly2{
     width: 90%;
   }
+  .fly1 p{
+    width: 100%;
+  }
   .fourth{
     width: 90vw;
     padding: 20px;
@@ -272,7 +281,7 @@ footer .social a{
     width: 100%;
   }
   .fourth p{
-    width: 80%;
+    width: 100%;
   }
   .banner{
     display: flex;
